@@ -5,6 +5,7 @@ import views.V_cleaning
 import views.V_filter
 import views.V_QP
 import views.V_Europresse
+import views.V_W_replace
 
 class MainView(tk.Toplevel):
     def __init__(self, parent):
@@ -18,7 +19,8 @@ class MainView(tk.Toplevel):
         #views.V_cleaning.V_cleaning(self)
         #views.V_filter.V_filter(self)
         #views.V_QP.V_QP(self)
-        views.V_Europresse.V_E(self)
+        #views.V_Europresse.V_E(self)
+        views.V_W_replace.V_WR(self)
 
 if __name__ == '__main__':
     root = tk.Tk()
